- time.accept2dyear = True is now equivalent to time.accept2dyear = 1 - removed unnecessary struct_time to tuple conversion - added more unit tests (See issue #10827 for discussion.)